--- a/overlay-nad/frameworks/base/core/res/res/values/config.xml
+++ b/overlay-nad/frameworks/base/core/res/res/values/config.xml
@@ -16,4 +16,7 @@
         <item>org.lineageos.settings.device.KeyHandler</item>
         <item>org.lineageos.lineageparts.gestures.KeyHandler</item>
     </string-array>
+
+    <!-- Whether device has SuperDart charging support -->
+    <bool name="config_hasSuperDartCharger">true</bool>
 </resources>
