lunaa: overlay: Disable extra dim
* Causing touch issue on our device

Signed-off-by: dodyirawan85 <40514988+dodyirawan85@users.noreply.github.com>

--- a/overlay/OPlusFrameworksResTarget/res/values/config.xml
+++ b/overlay/OPlusFrameworksResTarget/res/values/config.xml
@@ -477,4 +477,9 @@
         <item>96</item>   <!-- <item>sensorRadius</item> -->
     </integer-array>
 
+    <!-- Control whether bright color reduction is available. This should only be enabled on devices
+         that have a HWC implementation that can apply the matrix passed to setColorTransform
+         without impacting power, performance, and app compatibility (e.g. protected content). -->
+    <bool name="config_reduceBrightColorsAvailable">false</bool>
+
 </resources>
